[gd_scene load_steps=6 format=3 uid="uid://3begruyw7wti"]

[ext_resource type="Script" path="res://multiplayer.gd" id="1_tv1bw"]
[ext_resource type="PackedScene" uid="uid://bqn3h56ch5gtd" path="res://player/player.tscn" id="2_pbl3c"]
[ext_resource type="PackedScene" uid="uid://bu74xn3hlof5n" path="res://level.tscn" id="3_qf10t"]
[ext_resource type="Script" path="res://ui/game_ui.gd" id="3_qvi62"]

[sub_resource type="Theme" id="Theme_5cf16"]
LineEdit/font_sizes/font_size = 12

[node name="Multiplayer" type="Node2D"]
script = ExtResource("1_tv1bw")
player_scene = ExtResource("2_pbl3c")

[node name="MenuUI" type="MarginContainer" parent="."]
process_mode = 3
offset_right = 1152.0
offset_bottom = 40.0

[node name="CenterContainer" type="CenterContainer" parent="MenuUI"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MenuUI/CenterContainer"]
layout_mode = 2

[node name="Host" type="Button" parent="MenuUI/CenterContainer/HBoxContainer"]
layout_mode = 2
text = "Host Game"

[node name="Start" type="Button" parent="MenuUI/CenterContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Start Game"

[node name="Join" type="Button" parent="MenuUI/CenterContainer/HBoxContainer"]
layout_mode = 2
text = "Join Game"

[node name="Username" type="LineEdit" parent="MenuUI/CenterContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Guest"
expand_to_text_length = true

[node name="Address" type="LineEdit" parent="MenuUI/CenterContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "127.0.0.1"
expand_to_text_length = true

[node name="Port" type="LineEdit" parent="MenuUI/CenterContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "9595"

[node name="Label" type="Label" parent="MenuUI/CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="GameUI" type="CanvasLayer" parent="."]
script = ExtResource("3_qvi62")

[node name="Messages" type="Label" parent="GameUI"]
offset_left = 12.0
offset_top = 399.0
offset_right = 403.0
offset_bottom = 603.0

[node name="MessageLine" type="LineEdit" parent="GameUI"]
offset_left = 15.0
offset_top = 608.0
offset_right = 340.0
offset_bottom = 639.0
theme = SubResource("Theme_5cf16")
placeholder_text = "Message..."
flat = true

[node name="SpectateUI" type="CenterContainer" parent="GameUI"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -53.0
offset_right = -1.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="GameUI/SpectateUI"]
layout_mode = 2

[node name="SpectatePrevious" type="Button" parent="GameUI/SpectateUI/HBoxContainer"]
layout_mode = 2
text = "Previous Player
"

[node name="SpectateLabel" type="Label" parent="GameUI/SpectateUI/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Currently Spectating: Guest"

[node name="SpectateNext" type="Button" parent="GameUI/SpectateUI/HBoxContainer"]
layout_mode = 2
text = "Next Player"

[node name="Level" parent="." instance=ExtResource("3_qf10t")]

[node name="Players" type="Node2D" parent="."]

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player/player.tscn")
spawn_path = NodePath("../Players")

[node name="StartTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[connection signal="pressed" from="MenuUI/CenterContainer/HBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="MenuUI/CenterContainer/HBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MenuUI/CenterContainer/HBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="text_changed" from="MenuUI/CenterContainer/HBoxContainer/Username" to="." method="_on_username_text_changed"]
[connection signal="focus_entered" from="GameUI/MessageLine" to="GameUI" method="_on_message_line_focus_entered"]
[connection signal="focus_exited" from="GameUI/MessageLine" to="GameUI" method="_on_message_line_focus_exited"]
[connection signal="text_submitted" from="GameUI/MessageLine" to="GameUI" method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="GameUI/SpectateUI/HBoxContainer/SpectatePrevious" to="GameUI" method="_on_spectate_previous_pressed"]
[connection signal="pressed" from="GameUI/SpectateUI/HBoxContainer/SpectateNext" to="GameUI" method="_on_spectate_next_pressed"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
