[gd_scene load_steps=6 format=3 uid="uid://3begruyw7wti"]

[ext_resource type="Script" path="res://multiplayer/multiplayer.gd" id="1_tv1bw"]
[ext_resource type="PackedScene" uid="uid://bqn3h56ch5gtd" path="res://player/player.tscn" id="2_pbl3c"]
[ext_resource type="Theme" uid="uid://b2kensy6ma0e6" path="res://ui/theme/main.tres" id="3_2mwus"]
[ext_resource type="PackedScene" uid="uid://bu74xn3hlof5n" path="res://level/level.tscn" id="3_qf10t"]
[ext_resource type="FontFile" uid="uid://kn7qq7iwgrl5" path="res://assets/fonts/High Speed.otf" id="4_7sus0"]

[node name="Multiplayer" type="Node2D"]
script = ExtResource("1_tv1bw")
player_scene = ExtResource("2_pbl3c")

[node name="MenuUI" type="MarginContainer" parent="."]
process_mode = 3
offset_right = 1152.0
offset_bottom = 40.0
theme = ExtResource("3_2mwus")

[node name="CenterContainer" type="CenterContainer" parent="MenuUI"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MenuUI/CenterContainer"]
layout_mode = 2

[node name="Host" type="Button" parent="MenuUI/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(130, 25)
layout_mode = 2
theme = ExtResource("3_2mwus")
theme_override_fonts/font = ExtResource("4_7sus0")
theme_override_font_sizes/font_size = 12
text = "Host Game"

[node name="Start" type="Button" parent="MenuUI/CenterContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(130, 25)
layout_mode = 2
theme = ExtResource("3_2mwus")
theme_override_fonts/font = ExtResource("4_7sus0")
theme_override_font_sizes/font_size = 12
disabled = true
text = "Start Game"

[node name="Join" type="Button" parent="MenuUI/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(130, 25)
layout_mode = 2
theme = ExtResource("3_2mwus")
theme_override_fonts/font = ExtResource("4_7sus0")
theme_override_font_sizes/font_size = 12
text = "Join Game"

[node name="Username" type="LineEdit" parent="MenuUI/CenterContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 25)
layout_mode = 2
theme = ExtResource("3_2mwus")
theme_override_fonts/font = ExtResource("4_7sus0")
theme_override_font_sizes/font_size = 12
placeholder_text = "Guest"
alignment = 1
expand_to_text_length = true

[node name="Address" type="LineEdit" parent="MenuUI/CenterContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 25)
layout_mode = 2
theme = ExtResource("3_2mwus")
theme_override_fonts/font = ExtResource("4_7sus0")
theme_override_font_sizes/font_size = 12
text = "127.0.0.1"
alignment = 1
expand_to_text_length = true

[node name="Port" type="LineEdit" parent="MenuUI/CenterContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 25)
layout_mode = 2
theme = ExtResource("3_2mwus")
theme_override_fonts/font = ExtResource("4_7sus0")
theme_override_font_sizes/font_size = 12
text = "9595"
alignment = 1

[node name="Level" parent="." instance=ExtResource("3_qf10t")]
scale = Vector2(0.993144, 1.02031)

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player/player.tscn")

[node name="StartTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="AutoStartTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="pressed" from="MenuUI/CenterContainer/HBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="MenuUI/CenterContainer/HBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MenuUI/CenterContainer/HBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="text_changed" from="MenuUI/CenterContainer/HBoxContainer/Username" to="." method="_on_username_text_changed"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="AutoStartTimer" to="." method="_on_auto_start_timer_timeout"]
